--- a/src/main/resources/assets/winefoxs_spellbooks/lang/en_us.json
+++ b/src/main/resources/assets/winefoxs_spellbooks/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "task.winefoxs_spellbooks.casting_task": "Magic Attack",
   "task.winefoxs_spellbooks.casting_task.desc": "Little maid will use Iron's Spells to attack enemy",
-  "task.winefoxs_spellbooks.casting_task.condition.has_spells": "Spell book in main hand or bauble inventory"
+  "task.winefoxs_spellbooks.casting_task.condition.has_spells": "Spell book in main hand or bauble inventory",
+  "top.winefoxs_spellbooks.entity_maid.mana": "Mana: %d/%d"
 }
