--- a/src/main/resources/assets/winefoxs_spellbooks/lang/zh_cn.json
+++ b/src/main/resources/assets/winefoxs_spellbooks/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "task.winefoxs_spellbooks.casting_task": "法术攻击",
   "task.winefoxs_spellbooks.casting_task.desc": "女仆会使用铁之咒语魔法攻击敌人",
-  "task.winefoxs_spellbooks.casting_task.condition.has_spells": "主手或盔甲栏有注魔武器或饰品栏有注魔魔法书"
+  "task.winefoxs_spellbooks.casting_task.condition.has_spells": "主手或盔甲栏有注魔武器或饰品栏有注魔魔法书",
+  "top.winefoxs_spellbooks.entity_maid.mana": "魔力: %d/%d"
 }
