--- a/src/main/resources/assets/winefoxs_spellbooks/lang/zh_cn.json
+++ b/src/main/resources/assets/winefoxs_spellbooks/lang/zh_cn.json
@@ -6,5 +6,14 @@
   "task.winefoxs_spellbooks.magic_support_task.desc": "女仆会使用铁之咒语魔法支援主人",
   "task.winefoxs_spellbooks.magic_support_task.condition.has_spells": "主手或盔甲栏有注魔武器或饰品栏有注魔魔法书",
   "top.winefoxs_spellbooks.entity_maid.mana": "魔力: %d/%d",
-  "config.winefoxs_spellbooks.ysm_support": "Yes Steve Model 支持"
+  "config.winefoxs_spellbooks": "酒狐的魔法书",
+  "config.winefoxs_spellbooks.max_spell_range": "法术攻击最大索敌范围",
+  "config.winefoxs_spellbooks.start_spell_range": "法术施放开始距离",
+  "config.winefoxs_spellbooks.max_mana_multiplier": "最大法力值倍率",
+  "config.winefoxs_spellbooks.max_mana_multiplier.tooltip": "计算最大法力值时基于玩家的倍率 (默认: 1)",
+  "config.winefoxs_spellbooks.battle_walk_speed": "法术战斗中移动速度",
+  "config.winefoxs_spellbooks.max_combo_delay_tick": "最大施法间隔刻",
+  "config.winefoxs_spellbooks.drink_potion_in_battle": "法术战斗中无限治疗药水 (默认: true)",
+  "config.winefoxs_spellbooks.show_chat_bubbles": "法术战斗中显示法术名称 (Default: true)",
+  "chat_bubble.winefoxs_spellbooks.casting_task.no_available_spell": "冷却中"
 }
